--- a/clientes.html
+++ b/clientes.html
@@ -18,7 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/style.css">
-  <link rel="icon" href="img/img/favicon.png" type="image/x-icon">
+  <link rel="icon" href="img/favicon.png" type="image/x-icon">
 
 </head>
 
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="img/img/bad-dog-studio-logo.png" alt="Studio Bad Dog">
+          <img src="img/bad-dog-studio-logo.png" alt="Studio Bad Dog">
         </a>
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -73,7 +73,7 @@
         </article>
         <article class="col-12">
           <div class="card text-bg-dark border-0 rounded-0">
-            <img src="img/img/clients-1.jpg" class="card-img" alt="Andy Pandharikar">
+            <img src="img/clients-1.jpg" class="card-img" alt="Andy Pandharikar">
             <div class="card-img-overlay bg-second-alpha-color d-flex flex-column justify-content-md-center">
               <h5 class="card-title">Andy Pandharikar</h5>
               <p class="card-text">
@@ -97,7 +97,7 @@
                 </div>
                 <div class="modal-body">
                   <p>Posicioné una nueva marca comercial (en línea) y diseñé un sitio web adaptado y hecho a medida.</p>
-                  <img src="img/img/work-layout-1.jpg" alt="" class="img-fluid">
+                  <img src="img/work-layout-1.jpg" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -105,7 +105,7 @@
         </article>
         <article class="col-12 col-sm-6 col-lg-4">
           <div class="card text-bg-dark border-0 rounded-0">
-            <img src="img/img/clients-2.jpg" class="card-img" alt="Zev Couch">
+            <img src="img/clients-2.jpg" class="card-img" alt="Zev Couch">
             <div class="card-img-overlay bg-second-alpha-color d-flex flex-column justify-content-md-center">
               <h5 class="card-title">Zev Couch</h5>
               <p class="card-text">
@@ -131,7 +131,7 @@
                   <p>
                     He estado trabajando con Zeb en varios otros proyectos en el último año. Cuando se contactó conmigo para hablar sobre un proyecto que se desarrollaba en torno al diseño de una tienda web personalizada para su padre, inmediatamente me interesé e inspiré. Esto resultó ser un proyecto realmente inspirador y divertido en el que trabajar en conjunto, lo que dio como resultado un sitio web de diseño personalizado y muy creativo con una tienda en línea.
                   </p>
-                  <img src="img/img/work-layout-2.jpg" alt="" class="img-fluid">
+                  <img src="img/work-layout-2.jpg" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -139,7 +139,7 @@
         </article>
         <article class="col-12 col-sm-6 col-lg-4">
           <div class="card text-bg-dark border-0 rounded-0">
-            <img src="img/img/clients-3.jpg" class="card-img" alt="Lori Knisely">
+            <img src="img/clients-3.jpg" class="card-img" alt="Lori Knisely">
             <div class="card-img-overlay bg-second-alpha-color d-flex flex-column justify-content-md-center">
               <h5 class="card-title">Lori Knisely</h5>
               <p class="card-text">
@@ -165,7 +165,7 @@
                   <p>
                     Lori es dueña de su negocio junto con su esposo. Resultan ser una de esas empresas con las que me encanta trabajar. Me dan mucha libertad en mi proceso de diseño creativo, pero aún tienen muchas de sus propias ideas que quieren combinar. Este proyecto resultó ser un proyecto super divertido para trabajar juntos. ¡Ambos estamos imaginando una buena relación de negocios para trabajar nuevamente en proyectos futuros!
                   </p>
-                  <img src="img/img/work-layout-3.jpg" alt="" class="img-fluid">
+                  <img src="img/work-layout-3.jpg" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -173,7 +173,7 @@
         </article>
         <article class="col-12 col-sm-6 col-lg-4">
           <div class="card text-bg-dark border-0 rounded-0">
-            <img src="img/img/clients-4.jpg" class="card-img" alt="Tom Allan">
+            <img src="img/clients-4.jpg" class="card-img" alt="Tom Allan">
             <div class="card-img-overlay bg-second-alpha-color d-flex flex-column justify-content-md-center">
               <h5 class="card-title">Tom Allan</h5>
               <p class="card-text">
@@ -199,7 +199,7 @@
                   <p>
                     Tom me contactó con la idea de hacer un rediseño completo de su sitio web (obsoleto) y también hacer que responda. Estaba buscando un sitio web de aplicación de estilo moderno y me dio mucha libertad para crear un diseño que tenía en mente. El resultado es un sitio web de aspecto moderno del que ambos estamos orgullosos.
                   </p>
-                  <img src="img/img/work-layout-4.jpg" alt="" class="img-fluid">
+                  <img src="img/work-layout-4.jpg" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -207,7 +207,7 @@
         </article>
         <article class="col-12 col-sm-6 col-lg-4">
           <div class="card text-bg-dark border-0 rounded-0">
-            <img src="img/img/clients-5.jpg" class="card-img" alt="Jin Choeh">
+            <img src="img/clients-5.jpg" class="card-img" alt="Jin Choeh">
             <div class="card-img-overlay bg-second-alpha-color d-flex flex-column justify-content-md-center">
               <h5 class="card-title">Jin Choeh</h5>
               <p class="card-text">
@@ -233,7 +233,7 @@
                   <p>
                     He estado trabajando con el equipo de Shale Capital Group desde 2014. Hemos trabajado juntos en varios proyectos de sitios web de (re) diseño y (re) marca. Estoy muy contento de que nuestra relación continua demuestre que puedo ofrecer la calidad que requieren en sus proyectos.
                   </p>
-                  <img src="img/img/work-layout-5.jpg" alt="" class="img-fluid">
+                  <img src="img/work-layout-5.jpg" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -241,7 +241,7 @@
         </article>
         <article class="col-12 col-sm-6 col-lg-4">
           <div class="card text-bg-dark border-0 rounded-0">
-            <img src="img/img/clients-6.jpg" class="card-img" alt="Jennifer Blair">
+            <img src="img/clients-6.jpg" class="card-img" alt="Jennifer Blair">
             <div class="card-img-overlay bg-second-alpha-color d-flex flex-column justify-content-md-center">
               <h5 class="card-title">Jennifer Blair</h5>
               <p class="card-text">
@@ -267,7 +267,7 @@
                   <p>
                     He estado trabajando con el equipo de Lash Spa Studio desde 2014. Hemos trabajado juntos en varios proyectos de sitios web de (re) diseño y (re) marca. Estoy muy contento de que nuestra relación continua demuestre que puedo ofrecer la calidad que requieren en sus proyectos.
                   </p>
-                  <img src="img/img/work-layout-6.jpg" alt="" class="img-fluid">
+                  <img src="img/work-layout-6.jpg" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -275,7 +275,7 @@
         </article>
         <article class="col-12 col-sm-6 col-lg-4">
           <div class="card text-bg-dark border-0 rounded-0">
-            <img src="img/img/clients-7.jpg" class="card-img" alt="Sietse Kingma">
+            <img src="img/clients-7.jpg" class="card-img" alt="Sietse Kingma">
             <div class="card-img-overlay bg-second-alpha-color d-flex flex-column justify-content-md-center">
               <h5 class="card-title">Sietse Kingma</h5>
               <p class="card-text">
@@ -301,7 +301,7 @@
                   <p>
                     He estado trabajando con Bambuu BV como diseñador gráfico y diseñador web de forma regular desde 2014. Bambuu ha demostrado ser un negocio de inicio muy exitoso en los Países Bajos y estoy muy contento de poder ofrecer la calidad de trabajo que ofrecen. Requieren en sus proyectos.
                   </p>
-                  <img src="img/img/work-layout-7.jpg" alt="" class="img-fluid">
+                  <img src="img/work-layout-7.jpg" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
@@ -309,7 +309,7 @@
         </article>
         <article class="col-12">
           <div class="card text-bg-dark border-0 rounded-0">
-            <img src="img/img/clients-8.jpg" class="card-img" alt="Sergie Magdalin">
+            <img src="img/clients-8.jpg" class="card-img" alt="Sergie Magdalin">
             <div class="card-img-overlay bg-second-alpha-color d-flex flex-column justify-content-md-center">
               <h5 class="card-title">Sergie Magdalin</h5>
               <p class="card-text">
@@ -335,7 +335,7 @@
                   <p>
                     Fue justo al comienzo de mi negocio (principios de 2014), cuando el equipo de Webflow me contactó después de haber visto algunos de mis sitios web basados en Webflow. Estaban lanzando un Template Marketplace en ese entonces y me pidieron que fuera parte de él. ¡He estado creando plantillas de flujo web html5 modernas y receptivas para ellos desde entonces!
                   </p>
-                  <img src="img/img/work-layout-8.jpg" alt="" class="img-fluid">
+                  <img src="img/work-layout-8.jpg" alt="" class="img-fluid">
                 </div>
               </div>
             </div>
