--- a/comencemos.html
+++ b/comencemos.html
@@ -18,7 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/style.css">
-  <link rel="icon" href="img/img/favicon.png" type="image/x-icon">
+  <link rel="icon" href="img/favicon.png" type="image/x-icon">
 
 </head>
 
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="img/img/bad-dog-studio-logo.png" alt="Studio Bad Dog">
+          <img src="img/bad-dog-studio-logo.png" alt="Studio Bad Dog">
         </a>
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -96,7 +96,7 @@
           </p>
         </article>
         <article class="col-12 col-lg-6">
-          <img src="img/img/workflow-step-1.png" alt="Paso 1: Concepto y Presupuesto" class="img-fluid">
+          <img src="img/workflow-step-1.png" alt="Paso 1: Concepto y Presupuesto" class="img-fluid">
         </article>
       </section>
       <section class="row align-items-lg-center mt-3">
@@ -108,7 +108,7 @@
           </p>
         </article>
         <article class="col-12 col-lg-6 col order-lg-first">
-          <img src="img/img/workflow-step-2.png" alt="Paso 1: Concepto y Presupuesto" class="img-fluid">
+          <img src="img/workflow-step-2.png" alt="Paso 1: Concepto y Presupuesto" class="img-fluid">
         </article>
       </section>
       <section class="row align-items-lg-center mt-3">
@@ -120,7 +120,7 @@
           </p>
         </article>
         <article class="col-12 col-lg-6">
-          <img src="img/img/workflow-step-3.png" alt="Paso 1: Concepto y Presupuesto" class="img-fluid">
+          <img src="img/workflow-step-3.png" alt="Paso 1: Concepto y Presupuesto" class="img-fluid">
         </article>
       </section>
       <section class="row align-items-lg-center mt-3">
@@ -132,7 +132,7 @@
           </p>
         </article>
         <article class="col-12 col-lg-6 order-lg-first">
-          <img src="img/img/workflow-step-4.png" alt="Paso 1: Concepto y Presupuesto" class="img-fluid">
+          <img src="img/workflow-step-4.png" alt="Paso 1: Concepto y Presupuesto" class="img-fluid">
         </article>
       </section>
       <section class="row align-items-lg-center mt-3">
@@ -144,7 +144,7 @@
           </p>
         </article>
         <article class="col-12 col-lg-6">
-          <img src="img/img/workflow-step-5.png" alt="Paso 1: Concepto y Presupuesto" class="img-fluid">
+          <img src="img/workflow-step-5.png" alt="Paso 1: Concepto y Presupuesto" class="img-fluid">
         </article>
       </section>
       <section class="row mt-5 mb-3">
