--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/style.css">
-  <link rel="icon" href="img/img/favicon.png" type="image/x-icon">
+  <link rel="icon" href="img/favicon.png" type="image/x-icon">
 
 </head>
 
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="img/img/bad-dog-studio-logo.png" alt="Studio Bad Dog">
+          <img src="img/bad-dog-studio-logo.png" alt="Studio Bad Dog">
         </a>
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -118,16 +118,16 @@
           </article>
         </div>
         <div class="carousel-item active">
-          <img src="img/img/about-1.jpg" class="d-block w-100" alt="Acerca 1">
+          <img src="img/about-1.jpg" class="d-block w-100" alt="Acerca 1">
         </div>
         <div class="carousel-item">
-          <img src="img/img/about-2.jpg" class="d-block w-100" alt="Acerca 2">
+          <img src="img/about-2.jpg" class="d-block w-100" alt="Acerca 2">
         </div>
         <div class="carousel-item">
-          <img src="img/img/about-3.jpg" class="d-block w-100" alt="Acerca 3">
+          <img src="img/about-3.jpg" class="d-block w-100" alt="Acerca 3">
         </div>
         <div class="carousel-item">
-          <img src="img/img/about-4.jpg" class="d-block w-100" alt="Acerca 4">
+          <img src="img/about-4.jpg" class="d-block w-100" alt="Acerca 4">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
