--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/style.css">
-  <link rel="icon" href="img/img/favicon.png" type="image/x-icon">
+  <link rel="icon" href="img/favicon.png" type="image/x-icon">
 
 </head>
 
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="img/img/bad-dog-studio-logo.png" alt="Studio Bad Dog">
+          <img src="img/bad-dog-studio-logo.png" alt="Studio Bad Dog">
         </a>
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -75,7 +75,7 @@
           <a class="btn btn-lg btn-success fw-bold" href="#servicios">¡Sí, Empezemos!</a>
         </article>
         <article class="col-12 col-lg-7">
-          <img class="img-fluid" src="img/img/header-image.png" alt="¿Necesitas un increíble sitio web?">
+          <img class="img-fluid" src="img/header-image.png" alt="¿Necesitas un increíble sitio web?">
         </article>
         <article class="col-12 col-lg-5 order-lg-1">
           <h2>Sitios web responsivos</h2>
@@ -84,13 +84,13 @@
           </p>
         </article>
         <article class="col-12 col-lg-7">
-          <img class="img-fluid" src="img/img/header-image-2.png" alt="">
+          <img class="img-fluid" src="img/header-image-2.png" alt="">
         </article>
       </section>
       <section id="servicios" class="row min-vh-100 align-items-lg-center">
         <article class="col-12 col-md-6 col-lg-3 d-flex"> 
           <div class="card mx-auto mb-3" style="width: 18rem;">
-            <img src="img/img/icon-sites.png" class="card-img-top bg-third-color" alt="...">
+            <img src="img/icon-sites.png" class="card-img-top bg-third-color" alt="...">
             <div class="card-body">
               <h5 class="card-title">Nuevo sitio web</h5>
               <p class="card-text">¿Necesitas un (nuevo) sitio web 100% responsivo?</p>
@@ -100,7 +100,7 @@
         </article>
         <article class="col-12 col-md-6 col-lg-3 d-flex">
           <div class="card mx-auto mb-3" style="width: 18rem;">
-            <img src="img/img/icon-clients.png" class="card-img-top bg-third-color" alt="...">
+            <img src="img/icon-clients.png" class="card-img-top bg-third-color" alt="...">
             <div class="card-body">
               <h5 class="card-title">Clientes</h5>
               <p class="card-text">Clientes felices y proyectos hermosos</p>
@@ -110,7 +110,7 @@
         </article>
         <article class="col-12 col-md-6 col-lg-3 d-flex">
           <div class="card mx-auto mb-3" style="width: 18rem;">
-            <img src="img/img/icon-workflow.png" class="card-img-top bg-third-color" alt="...">
+            <img src="img/icon-workflow.png" class="card-img-top bg-third-color" alt="...">
             <div class="card-body">
               <h5 class="card-title">Flujo de trabajo</h5>
               <p class="card-text">Escucho tus necesidades. Discutamos tu proyecto</p>
@@ -120,7 +120,7 @@
         </article>
         <article class="col-12 col-md-6 col-lg-3 d-flex">
           <div class="card mx-auto mb-3" style="width: 18rem;">
-            <img src="img/img/icon-about.png " class="card-img-top bg-third-color" alt="...">
+            <img src="img/icon-about.png " class="card-img-top bg-third-color" alt="...">
             <div class="card-body">
               <h5 class="card-title">¿Interesado?</h5>
               <p class="card-text">Comencemos con tu nuevo proyecto</p>
