--- a/sitios.html
+++ b/sitios.html
@@ -18,7 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/style.css">
-  <link rel="icon" href="img/img/favicon.png" type="image/x-icon">
+  <link rel="icon" href="img/favicon.png" type="image/x-icon">
 
 </head>
 
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="img/img/bad-dog-studio-logo.png" alt="Studio Bad Dog">
+          <img src="img/bad-dog-studio-logo.png" alt="Studio Bad Dog">
         </a>
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -71,13 +71,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/img/work-slide-1.jpg" class="d-block w-100" alt="...">
+              <img src="img/work-slide-1.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="img/img/work-slide-2.jpg" class="d-block w-100" alt="...">
+              <img src="img/work-slide-2.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="img/img/work-slide-3.jpg" class="d-block w-100" alt="...">
+              <img src="img/work-slide-3.jpg" class="d-block w-100" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -91,7 +91,7 @@
         </div>
       </div>
     </section>
-    <section id="single-page" class="min-vh-100 bg-hero-image" style="--bg-image: url(../img/img/site-singlepage.jpg)">
+    <section id="single-page" class="min-vh-100 bg-hero-image" style="--bg-image: url(../img/site-singlepage.jpg)">
       <article class="min-vh-100 bg-alpha-color d-flex align-items-center">
         <div class="container">
           <article class="col-12 col-lg-6 offset-lg-6">
@@ -130,7 +130,7 @@
         </div>
         </article>
     </section>
-    <section id="multi-page" class="min-vh-100 bg-hero-image" style="--bg-image: url(../img/img/site-multipage.jpg)">
+    <section id="multi-page" class="min-vh-100 bg-hero-image" style="--bg-image: url(../img/site-multipage.jpg)">
       <article class="min-vh-100 bg-alpha-color d-flex align-items-center">
         <div class="container">
           <article class="col-12 col-lg-6">
